--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,20 @@ body {
     min-height: 100%;
 }
 
+#imageroll {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 15vw;
+}
+
+#imageroll img {
+    object-fit: cover;
+    height: 120px;
+    width: 120px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
 .content {
     min-height: 95vh;
     max-width: 1100px;
