--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ footer a:hover {
 
 footer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     min-height: 20vh;
     background-color: rgb(0, 0, 0);
