--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div>
+    <div class="footer-column">
         <p>Useful Links:</p>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -8,7 +8,7 @@
             <li><a href="https://youtu.be/gGRkjW8hnPk">Somewhere else...</a></li>
         </ul>
     </div>
-    <div>
+    <div class="footer-column" id="social-media">
         <a href="https://github.com/elliott-huge"><img src="../res/GitHublight-64px.png" alt="github icon"/></a>
         <a href="https://www.linkedin.com/in/elliott-huge"><img src="../res/linkedinlight-64px.png" alt="linkedin icon"/></a>
     </div>
