--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,17 @@
 <footer>
-    <div class="footer-column">
-        <p>Useful Links:</p>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sitemap.html">Sitemap</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="https://youtu.be/gGRkjW8hnPk">Somewhere else...</a></li>
-        </ul>
-    </div>
-    <div class="footer-column" id="social-media">
-        <a href="https://github.com/elliott-huge"><img src="../res/GitHublight-64px.png" alt="github icon"/></a>
-        <a href="https://www.linkedin.com/in/elliott-huge"><img src="../res/linkedinlight-64px.png" alt="linkedin icon"/></a>
+    <div class="footer-content">
+        <div class="footer-column">
+            <p>Useful Links:</p>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sitemap.html">Sitemap</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://youtu.be/gGRkjW8hnPk">Somewhere else...</a></li>
+            </ul>
+        </div>
+        <div class="footer-column" id="social-media">
+            <a href="https://github.com/elliott-huge"><img src="../res/GitHublight-64px.png" alt="github icon"/></a>
+            <a href="https://www.linkedin.com/in/elliott-huge"><img src="../res/linkedinlight-64px.png" alt="linkedin icon"/></a>
+        </div>
     </div>
 </footer>
