--- a/css/style.css
+++ b/css/style.css
@@ -145,27 +145,33 @@ nav a:hover {
 /* ==Footer Elements== */
 
 footer {
+    min-height: 20vh;
+    background-color: rgb(0, 0, 0);
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    min-height: 20vh;
-    background-color: rgb(0, 0, 0);
-    padding: 5vh 20vw;
+    padding: 5vh min(50px, 5vw);
 }
 
-footer a, footer p, footer li {
+.footer-content a, footer p, footer li {
     color: rgb(153, 153, 153);
 }
 
-footer ul {
+.footer-content ul {
     padding-inline-start: 15px;
 }
 
-footer a:hover {
+.footer-content a:hover {
     color:rgb(226, 226, 226);
 }
 
-.footer-column li {
+.footer-content li {
     margin-bottom: 10px;
 }
 
