--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,6 @@ nav {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: right;
-    margin-right: 12vw;
 }
 
 nav a {
@@ -192,7 +191,7 @@ footer {
 }
 
 #social-media {
-    text-align: right;
+    text-align: center;
 }
 
 /* ==Other== */
