rmv .html from links, edited reaction format

--- a/css/style.css
+++ b/css/style.css
@@ -77,30 +77,6 @@ a:hover {
     max-width: 33.333%;
 }
 
-/* ==Screen Size Queries== */
-
-@media (max-width: 1145px) {
-    .content {
-        margin-left: 15px;
-        margin-right: 15px;
-    }
-}
-
-@media (max-width: 640px) {
-    .two-thirds-container, .one-third-container {
-        max-width: none;
-    }
-
-    p, li {
-        font-size: 16px;
-    }
-
-    ul {
-        padding-inline-start: 15px;
-    }
-}
-
-
 /* ==Nav Elements== */
 
 nav {
@@ -208,4 +184,30 @@ footer {
     width: 120px;
     margin-right: 10px;
     margin-bottom: 10px;
+}
+
+/* ==Screen Size Queries== */
+
+@media (max-width: 1145px) {
+    .content {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+@media (max-width: 640px) {
+    .two-thirds-container, .one-third-container {
+        max-width: none;
+    }
+
+    p, li {
+        font-size: 16px;
+    }
+
+    ul {
+        padding-inline-start: 15px;
+    }
+    #image-roll {
+        text-align: center;
+    }
 }
