--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="audiophile.html">Audio</a>
-    <a href="contact.html">Contact</a>
+    <a href="/html/index">Home</a>
+    <a href="/html/projects">Projects</a>
+    <a href="/html/audiophile">Audio</a>
+    <a href="/html/contact">Contact</a>
     <a href="https://youtu.be/hePJ1YPMxEw">Somewhere else...</a>
 </nav>
