styling changes, added one third column to index

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
         <div class="footer-column">
             <p>Useful Links:</p>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sitemap.html">Sitemap</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/html/index">Home</a></li>
+                <li><a href="../res/sitemap.txt" download>Download Sitemap</a></li>
+                <li><a href="/html/contact">Contact</a></li>
                 <li><a href="https://youtu.be/gGRkjW8hnPk">Somewhere else...</a></li>
             </ul>
         </div>
