--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
-    <a href="/html/index">Home</a>
-    <a href="/html/projects">Projects</a>
+    <a href="/html/index">Homepage</a>
+    <a href="/html/projects">Elliott's Projects</a>
     <a href="/html/audiophile">Audio</a>
-    <a href="/html/contact">Contact</a>
-    <a href="https://youtu.be/hePJ1YPMxEw">Somewhere else...</a>
+    <a href="/html/contact">Contact Elliott</a>
+    <a href="https://youtu.be/hePJ1YPMxEw">Go Somewhere else...</a>
 </nav>
