Fixed nav & footer text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,11 @@
 <footer>
     <div class="footer-content">
         <div class="footer-column">
-            <p>Useful Links:</p>
             <ul>
-                <li><a href="/html/index">Home</a></li>
+                <li><a href="/html/index">Homepage</a></li>
                 <li><a href="../res/sitemap.txt" download>Download Sitemap</a></li>
-                <li><a href="/html/contact">Contact</a></li>
-                <li><a href="https://youtu.be/gGRkjW8hnPk">Somewhere else...</a></li>
+                <li><a href="/html/contact">Contact Elliott</a></li>
+                <li><a href="https://youtu.be/gGRkjW8hnPk">Go Somewhere else...</a></li>
             </ul>
         </div>
         <div class="footer-column" id="social-media">
