--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ h1 + p {
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
 }
 
 .two-thirds-container {
