--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,12 @@
 
 h1, h2, h3, p, li {
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(0, 0, 0);
+    color: #333;
     font-size: 1rem;
 }
 
 body {
-    background-color: rgb(224, 224, 224);
+    background-color: rgb(239, 239, 239);
     margin: 0;
     min-height: 100%;
 }
@@ -32,7 +32,7 @@ h2 {
 }
 
 p {
-    line-height: 1.2;
+    line-height: 1.3;
     font-size: 19px;
     margin-top: 20px;
     margin-bottom: 20px;
