--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
                 <li><a href="/html/index">Homepage</a></li>
                 <li><a href="../res/sitemap.txt" download>Download Sitemap</a></li>
                 <li><a href="/html/contact">Contact Elliott</a></li>
+                <li><a href="/res/LICENSE.txt">License</a></li>
             </ul>
         </div>
         <div class="footer-column" id="social-media">
