a:active black & yellow

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
         <div class="footer-column">
             <ul>
                 <li><a href="/html/index">Homepage</a></li>
-                <li><a href="../res/sitemap.txt" download>Download Sitemap</a></li>
                 <li><a href="/html/contact">Contact Elliott</a></li>
-                <li><a href="/res/LICENSE.txt">License</a></li>
+                <li><a href="../res/sitemap.txt">Sitemap.txt</a></li>
+                <li><a href="/res/LICENSE.txt">License.txt</a></li>
             </ul>
         </div>
         <div class="footer-column" id="social-media">
