--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ a:hover {
     text-decoration-thickness: 3px;
 }
 
+a:active {
+    background-color: yellow;
+    color: black;
+}
+
 h1 a:hover{
     text-decoration-thickness: 5px;
 }
@@ -225,6 +230,11 @@ footer {
 }
 
 @media (max-width: 640px) {
+    nav{
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+
     .two-thirds-container, .one-third-container {
         width: 100%;
     }
