--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@
 
 /* ==General== */
 
+::selection {
+    background-color: yellow;
+    color: black;
+}
+
 h1, h2, h3, p, li {
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
@@ -63,11 +68,6 @@ a:hover {
     text-decoration-thickness: 3px;
 }
 
-a:active {
-    background-color: yellow;
-    color: black;
-}
-
 h1 a:hover{
     text-decoration-thickness: 5px;
 }
@@ -78,6 +78,11 @@ h2 a:hover {
 
 h1 + p {
     margin-top: 0px;
+}
+
+a:focus {
+    background-color: yellow;
+    color: black;
 }
 
 
