--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,6 @@
 
 /* ==General== */
 
-::selection {
-    background-color: yellow;
-    color: black;
-}
-
 h1, h2, h3, p, li {
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
@@ -78,13 +73,6 @@ h2 a:hover {
 
 h1 + p {
     margin-top: 0px;
-}
-
-a:focus {
-    background-color: yellow;
-    color: black;
-    text-decoration: underline;
-    text-decoration-thickness: 3px;
 }
 
 
@@ -252,4 +240,20 @@ footer {
     #image-roll {
         justify-content: center;
     }
+}
+
+
+/* ==Accessibility== */
+
+content a:focus {
+    background-color: yellow;
+    color: black;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+}
+
+content ::selection {
+    background-color: yellow;
+    color: black;
+    text-decoration: underline;
 }
