--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ h1, h2, h3, p, li {
 body {
     background-color: rgb(239, 239, 239);
     margin: 0;
-    min-height: 100%;
 }
 
 h1 {
@@ -78,11 +77,14 @@ h1 + p {
 
 /* ==Structural== */
 
-.content {
-    min-height: 95vh;
+.content, nav, footer {
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.content {
+    min-height: 95vh;
     margin-bottom: 20px;
 }
 
@@ -141,9 +143,6 @@ nav a:hover {
 footer {
     min-height: 20vh;
     background-color: #111;
-    max-width: 1100px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .footer-content {
@@ -216,10 +215,6 @@ footer {
 }
 
 @media (max-width: 640px) {
-    nav{
-        margin-left: -15px;
-        margin-right: -15px;
-    }
 
     .two-thirds-container, .one-third-container {
         width: 100%;
