--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,10 @@ footer {
 /* ==Screen Size Queries== */
 
 @media (max-width: 640px) {
+    nav {
+        justify-content: center;
+    }
+
     nav a {
         flex-basis: 40%;
     }
