--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 /* ==General== */
 
-h1, h2, h3, p, li {
+h1, h2, h3, p, li, code {
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
     font-size: 1rem;
@@ -28,6 +28,14 @@ h1 {
 h2 {
     line-height: 1;
     font-size: 24px;
+}
+
+code {
+    line-height: 1.3;
+    font-size: 19px;
+    background-color: #ccc;
+    padding: 0 3px;
+    border-radius: 2px;
 }
 
 p {
@@ -202,6 +210,16 @@ footer {
     margin-bottom: 10px;
 }
 
+pre {
+    margin: -15px 0;
+}
+
+pre code {
+    background-color: #ccc;
+    border: 1px solid #111;
+    display: block;
+    padding: 20px;
+  }
 
 /* ==Screen Size Queries== */
 
@@ -222,7 +240,7 @@ footer {
         margin-top: 0;
     }
 
-    p, li {
+    p, li, code {
         font-size: 16px;
     }
 
