Added a new button to the button page))

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -2,7 +2,6 @@
     color: white;
     background-color:darkcyan;
     font-size: 24px;
-    min-width: 100px;
     padding: 8px 16px;
 }
 
@@ -25,16 +24,51 @@
 
 #button-one:active {
     border-bottom: 2px black solid;
-    transform: translateY(4px);
+    transform: translateY(2px);
 }
 
 /* Button 2 */
 
+#button-two {
+    border: solid black 1px;
+}
 
+#button-two:hover {
+    border-bottom: 6px black solid;
+    transform: translateY(-2.5px);
+}
+
+#button-two:active {
+    border-bottom: 2px black solid;
+    transform: translateY(-0.5px);
+}
+
+#button-two:disabled {
+    border: solid black 1px;
+    transform: translateY(0px);
+}
+
+#button-two:nth-child(2):disabled {
+    border: solid black 1px;
+    background-color: lightgrey;
+    color: #666;
+    transform: translateY(0px);
+}
 
 /* Button 3 */
 
+#button-three {
+    border: solid black 1px;
+}
 
+#button-three:hover {
+    -webkit-box-shadow: inset 0px 0px 0px 1px black;
+    box-shadow: inset 0px 0px 0px 1px black;
+}
+
+#button-three:active {
+    border: solid black 2px;
+}
 
 /* Button 4 */
 
