--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,8 @@ nav a:hover {
 /* ==Footer Elements== */
 
 footer {
-    min-height: 20vh;
     background-color: #111;
-    padding-top: 20px;
+    padding: 40px 0;
 }
 
 .footer-content {
@@ -246,6 +245,10 @@ pre code {
 
     ul {
         padding-inline-start: 15px;
+    }
+
+    footer {
+        padding: 40px 0 80px 0;
     }
 
     #image-roll {
