--- a/css/style.css
+++ b/css/style.css
@@ -129,15 +129,13 @@ nav {
 }
 
 nav a {
-    font-size: large;
     font-family: 'Oxygen', sans-serif;
     text-decoration: none;
-    color: #ddd;
+    color: #ccc;
     font-size: 2rem;
 
-    text-align: center;
-    border: none;
-    padding: 10px 30px;
+    padding: 10px 10px;
+    margin-right: 20px;
 }
 
 nav a:hover {
@@ -160,7 +158,7 @@ footer {
 }
 
 .footer-content a, footer p, footer li {
-    color: rgb(153, 153, 153);
+    color: #ccc;
 }
 
 .footer-content ul {
@@ -168,7 +166,7 @@ footer {
 }
 
 .footer-content a:hover {
-    color:rgb(226, 226, 226);
+    color:#eee;
 }
 
 .footer-content li {
@@ -228,7 +226,8 @@ pre code {
     }
 
     nav a {
-        flex-basis: 40%;
+        flex-basis: 51%;
+        margin-right: 0;
     }
 
     .two-thirds-container, .one-third-container, .footer-column {
