--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ nav a {
     text-decoration: none;
     color: #ccc;
     font-size: 2rem;
+    text-align: center;
 
     padding: 10px 10px;
     margin-right: 20px;
@@ -175,6 +176,7 @@ footer {
 
 .footer-column {
     width: 320px;
+    padding: 0 50px;
 }
 
 #social-media {
