--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,7 @@
 <nav>
-    <a href="/html/index">Home</a>
-    <a href="/html/projects">Projects</a>
-    <a href="/html/contact">Contact</a>
+    <div id="nav-container">
+        <a href="/html/index">Home</a>
+        <a href="/html/projects">Projects</a>
+        <a href="/html/contact">Contact</a>    
+    </div>
 </nav>
