--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ nav {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: right;
-    padding: 0 20px;;
+    padding: 0 20px;
 }
 
 nav a {
