--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,10 @@ nav a {
     padding: 0 16px;
 }
 
+nav a:last-child {
+    border: none;
+}
+
 nav a:hover {
     color: #eee;
     text-decoration: underline;
