--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ nav a:last-child {
     border: none;
 }
 
-nav a:hover {
+nav a:hover, nav a:focus {
     color: #eee;
     text-decoration: underline;
 }
