--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,15 @@ h2 {
     font-size: 24px;
 }
 
+h3 {
+    line-height: 1.4;
+    font-size: 19px;
+}
+
+span {
+    vertical-align: text-bottom;
+}
+
 code {
     line-height: 1.3;
     font-size: 19px;
