--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h1, h2, h3, p, li, code {
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
     font-size: 1rem;
+    text-underline-offset: 3px;
 }
 
 body {
