--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ h2 {
 h3 {
     line-height: 1.4;
     font-size: 19px;
+    margin-top: 1em;
+    margin-bottom: .5em;
 }
 
 span {
@@ -52,8 +54,8 @@ code {
 p {
     line-height: 1.3;
     font-size: 19px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: .5em;
+    margin-bottom: .5em;
 }
 
 ul {
