--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -63,4 +63,10 @@ button {
   color: white;
   font-family: Roboto, sans-serif;
   font-weight: 700;
+}
+
+button:hover, button:focus {
+  color: black;
+  background-color: yellow;
+  text-decoration: underline;
 }/*# sourceMappingURL=dashboard.css.map */
