--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -8,6 +8,7 @@
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  flex-wrap: wrap;
 }
 
 .panel {
@@ -17,7 +18,7 @@
   width: -moz-fit-content;
   width: fit-content;
   border-radius: 12px;
-  box-shadow: 0px 5px 10px black;
+  box-shadow: 0px 5px 10px #333;
   overflow: hidden;
   min-height: 256px;
   min-width: 256px;
