--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,18 +14,17 @@
 .panel {
   display: block;
   background-color: white;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
   border-radius: 12px;
   box-shadow: 0px 5px 10px #333;
   overflow: hidden;
   min-height: 256px;
   min-width: 256px;
+  max-width: 80%;
 }
 
 .panel-content {
-  padding: 16px;
+  padding: 24px;
+  margin: auto;
 }
 
 h2 {
@@ -50,7 +49,7 @@ img {
      object-fit: cover;
 }
 
-#visits {
+#middle-panel {
   text-align: center;
 }
 
@@ -70,4 +69,22 @@ button:hover, button:focus {
   color: black;
   background-color: yellow;
   text-decoration: underline;
+}
+
+#datetime {
+  position: fixed;
+  text-align: right;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 16px;
+  top: 0;
+  right: 0;
+}
+
+@media (max-width: 800px) {
+  #datetime {
+    position: relative;
+    display: inline;
+  }
 }/*# sourceMappingURL=dashboard.css.map */
