--- a/css/dashboard.scss
+++ b/css/dashboard.scss
@@ -12,16 +12,17 @@
 .panel {
     display: block;
     background-color: white;
-    width: fit-content;
     border-radius: 12px;
     box-shadow: 0px 5px 10px #333;
     overflow: hidden;
     min-height: 256px;
     min-width: 256px;
+    max-width: 80%;
 }
 
 .panel-content {
-    padding: 16px;
+    padding: 24px;
+    margin: auto;
 }
 
 h2 {
@@ -45,7 +46,7 @@ img {
     object-fit: cover;
 }
 
-#visits {
+#middle-panel {
     text-align: center;
 }
 
@@ -65,4 +66,20 @@ button:hover, button:focus {
     color: black;
     background-color: yellow;
     text-decoration: underline;
+}
+
+#datetime {
+    position: fixed;
+    text-align: right;
+    width: fit-content;
+    padding: 16px;
+    top: 0;
+    right: 0;
+}
+
+@media (max-width: 800px) {
+    #datetime {
+        position: relative;
+        display: inline;
+    }
 }
