rm visit counter, api broken. move clock

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -24,6 +24,8 @@
 .panel-content {
   padding: 24px;
   margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 h2 {
@@ -50,6 +52,7 @@ img {
 
 #middle-panel {
   text-align: center;
+  background-color: yellow;
 }
 
 button {
@@ -68,21 +71,4 @@ button:hover, button:focus {
   color: black;
   background-color: yellow;
   text-decoration: underline;
-}
-
-#datetime {
-  position: fixed;
-  text-align: right;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 16px;
-  top: 0;
-  right: 0;
-}
-
-@media (max-width: 800px) {
-  #datetime {
-    position: relative;
-    display: inline;
-  }
 }/*# sourceMappingURL=dashboard.css.map */
