--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -11,19 +11,19 @@
 }
 
 .panel {
-  display: block;
+  display: flex;
   background-color: white;
   border-radius: 12px;
   box-shadow: 0px 5px 10px #333;
   overflow: hidden;
-  min-height: 256px;
-  min-width: 256px;
+  height: 256px;
+  width: 256px;
   max-width: 80%;
+  align-items: center;
 }
 
 .panel-content {
   padding: 24px;
-  margin: auto;
   display: flex;
   flex-direction: column;
 }
@@ -52,7 +52,7 @@ img {
 
 #middle-panel {
   text-align: center;
-  background-color: yellow;
+  justify-content: center;
 }
 
 button {
