--- a/css/dashboard.scss
+++ b/css/dashboard.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .content {
     display: flex;
     flex-direction: row;
@@ -10,19 +11,19 @@
 }
 
 .panel {
-    display: block;
+    display: flex;
     background-color: white;
     border-radius: 12px;
     box-shadow: 0px 5px 10px #333;
     overflow: hidden;
-    min-height: 256px;
-    min-width: 256px;
+    height: 256px;
+    width: 256px;
     max-width: 80%;
+    align-items: center;
 }
 
 .panel-content {
     padding: 24px;
-    margin: auto;
     display: flex;
     flex-direction: column;
 }
@@ -50,7 +51,10 @@ img {
 
 #middle-panel {
     text-align: center;
+    justify-content: center;
 }
+
+
 
 button {
     display: block;
